<resources>
    <string name="app_name">HealthMate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an Account? Sign In</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="welcome">Welcome to HealthMate</string>

    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    other file-->
    <string name="profile_creation">Profile Creation</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="calorie_tracker">Calorie Tracker</string>
    <string name="training_splits">Training Splits</string>
    <string name="_60">60</string>
    <string name="calories_taken">Calories Taken = 0 KCAL</string>
    <string name="calories">Calories</string>
    <string name="kcal">KCAL</string>
    <string name="reset">RESET</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_height_in_cm">Enter Height (in cm)</string>
    <string name="enter_weight_in_kg">Enter weight (in kg)</string>
    <string name="enter_gender">Enter Gender</string>


    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to Say</item>
    </array>

    <string name="action_settings">Settings</string>
    <string name="about">⦿This app was created to track daily water intake.\n⦿After drinking, press the button with a number on it multiple times or select custom amount and press it for example (250 adds 250ml, 500 adds 500ml).\n⦿Progress resets everyday.\n⦿This app has a reminder, that reminds you to drink every hour.</string>
    <string name="hint">Enter custom goal in ml</string>
    <string name="set_custom_goal">Set custom goal</string>
    <string name="reset_progress">Reset current progress</string>


</resources>